<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">


    <TextView
        android:id="@+id/kertas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/coming_soon"
        android:rotation="-10"
        android:text="@string/kertas"
        android:textColor="#FF5722"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/gunting"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gunting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/coming_soon"
        android:rotation="-10"
        android:text="@string/gunting"
        android:textColor="#4CAF50"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/kertas"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/batu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/coming_soon"
        android:rotation="-10"
        android:text="@string/batu"
        android:textColor="#9C27B0"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/kertas"
        app:layout_constraintTop_toBottomOf="@+id/kertas" />

    <ImageView
        android:id="@+id/btn4"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="12dp"
        android:contentDescription="batu"
        app:layout_constraintEnd_toEndOf="@+id/textComp"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toStartOf="@+id/textComp"
        app:layout_constraintTop_toBottomOf="@+id/textComp"
        app:srcCompat="@drawable/ic_batu" />

    <ImageView
        android:id="@+id/btn3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="60dp"
        android:contentDescription="gunting"
        app:layout_constraintEnd_toEndOf="@+id/btn2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn2"
        app:layout_constraintTop_toBottomOf="@+id/btn2"
        app:srcCompat="@drawable/ic_gunting" />

    <ImageView
        android:id="@+id/btn6"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="60dp"
        android:contentDescription="gunting"
        app:layout_constraintEnd_toEndOf="@+id/btn5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn5"
        app:layout_constraintTop_toBottomOf="@+id/btn5"
        app:srcCompat="@drawable/ic_gunting" />

    <ImageView
        android:id="@+id/btn2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="56dp"
        android:contentDescription="kertas"
        app:layout_constraintEnd_toEndOf="@+id/btn1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn1"
        app:layout_constraintTop_toBottomOf="@+id/btn1"
        app:srcCompat="@drawable/ic_kertas" />

    <TextView
        android:id="@+id/textComp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="56dp"
        android:fontFamily="@font/comic_neue_bold"
        android:text="@string/comp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="164dp"
        android:contentDescription="batu"
        app:layout_constraintEnd_toStartOf="@+id/btn4"
        app:layout_constraintHorizontal_bias="0.981"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_batu" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="224dp"
        android:fontFamily="@font/comic_neue_bold"
        android:rotation="-10"
        android:text="VS"
        android:textAlignment="center"
        android:textColor="#C63131"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btn5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn2"
        app:layout_constraintTop_toBottomOf="@+id/batu" />

    <TextView
        android:id="@+id/tvnama3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/comic_neue_bold"
        android:text="Pemain1"

        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textComp"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn5"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="56dp"
        android:contentDescription="kertas"
        app:layout_constraintEnd_toEndOf="@+id/btn4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn4"
        app:layout_constraintTop_toBottomOf="@+id/btn4"
        app:srcCompat="@drawable/ic_kertas" />


    <ImageView
        android:id="@+id/btn7"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="28dp"
        android:contentDescription="@string/refresh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn6"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_refresh" />

    <ImageView
        android:id="@+id/menuCPU"
        android:layout_width="74dp"
        android:layout_height="83dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn7"
        app:layout_constraintHorizontal_bias="0.244"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn3"
        app:layout_constraintVertical_bias="0.654"
        app:srcCompat="@drawable/ic_home" />

</androidx.constraintlayout.widget.ConstraintLayout>