<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity5">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comic_neue_bold"
        android:text="@string/pilih_lawanmu"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.109"
        tools:text="PILIH LAWANMU" />

    <ImageView
        android:id="@+id/pemainvspemain"
        android:layout_width="196dp"
        android:layout_height="126dp"
        android:layout_marginTop="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.006"
        app:srcCompat="@drawable/ic_landing_page1"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/pemainvsCPU"
        android:layout_width="152dp"
        android:layout_height="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pemainvspemain"
        app:layout_constraintVertical_bias="0.304"
        app:srcCompat="@drawable/ic_landing_page2"
        android:contentDescription="@string/todo1" />

    <TextView
        android:id="@+id/tvNama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/comic_neue_bold"
        android:text=""
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/pemainvspemain"
        app:layout_constraintTop_toBottomOf="@+id/pemainvspemain" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/comic_neue_bold"
        android:text="Pemain"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/pemainvspemain"
        app:layout_constraintTop_toBottomOf="@+id/pemainvspemain"
        tools:text="Pemain" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comic_neue_bold"
        android:text="vs"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/tvNama"
        app:layout_constraintTop_toBottomOf="@+id/pemainvspemain"
        tools:text="vs" />

    <TextView
        android:id="@+id/tvnama2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/comic_neue_bold"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/pemainvsCPU"
        app:layout_constraintTop_toBottomOf="@+id/pemainvsCPU" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comic_neue_bold"
        android:text="vs"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintStart_toEndOf="@+id/tvnama2"
        app:layout_constraintTop_toBottomOf="@+id/pemainvsCPU"
        tools:text="vs" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/comic_neue_bold"
        android:text="CPU"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/pemainvsCPU"
        app:layout_constraintTop_toBottomOf="@+id/pemainvsCPU"
        tools:text="CPU" />
</androidx.constraintlayout.widget.ConstraintLayout>